--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,7 +1,33 @@
-.title{
-    color:red;
-    font-family: Roboto;
-    span{
-        color: royalblue;
+.container{
+    height: calc(100vh - 5rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .title{
+        max-width: 700px;
+        .welcome{
+            display: inline-block;
+            font-size: 1.5rem;
+            font-weight: bold;
+
+        }
+        h1{
+            margin: 2rem 0 2rem 0;
+            font-size: 5rem;
+            line-height: 4.5rem;
+            font-weight: bold;
+            span{
+                color: var(--cyan-500);
+            }
+        }
+        p{
+            font-size: 1.5rem;
+            line-height: 2.5rem;
+            margin-bottom: 2rem;
+            span{
+                color:var(--cyan-500);
+                font-weight: bold;
+            }
+        }
     }
 }
