--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,7 +1,10 @@
 .container{
     height: calc(100vh - 5rem);
+    max-width: 1200px;
+    padding: 0 2rem;
+    margin: 0 auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     .title{
         max-width: 700px;
