--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,7 @@
     --gray-300: #a8a8b5;
     --gray-700: #29292E;
     --gray-900: #121214;
-
+    --gray-600: #323238
     --green-500: #12a519;
 
 
